--- a/index.html
+++ b/index.html
@@ -716,6 +716,50 @@
 						</div>
 					</div>
 				</div>
+				<div class="section_wrapper">
+					<div class="col-md-3 tablet-one-fourth mobile-one clearfix" data-desktop-col="one-fourth"
+						data-tablet-col="tablet-one-fourth" data-mobile-col="mobile-one">
+						<div class="mcb-wrap_inner">
+							<div class="col-12 mcb_item_custom259 tablet-one mobile-one">
+								<div class=" mcb-column_inner_custom259">
+									<div
+										class="image_frame element_classes image_item no_link scale-with-grid alignnone no_border">
+										<div class="image_wrapper"><img class="scale-with-grid"
+												src="content/carwash3/images/carwash3-about-pic2.webp"
+												alt="carwash3-about-pic2" width="223" height="223" /> </div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-9 tablet-three-fourth mobile-one clearfix" data-desktop-col="three-fourth"
+						data-tablet-col="tablet-three-fourth" data-mobile-col="mobile-one">
+						<div class="mcb-wrap_inner">
+							<div
+								class="col-12 mcb_item_custom248 tablet-one mobile-one column_icon_box_2 mfn-item-inline">
+								<div class=" mcb-column_inner_custom248">
+									<div class="mfn-icon-box mfn-icon-box-left mfn-icon-box-center">
+										<div class="icon-wrapper"> <i class="icon-minus-fine" aria-hidden="true"></i>
+										</div>
+										<div class="desc-wrapper">
+											<h6 class="title">DETAILING WOLVES</h6>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 mcb_item_custom415 tablet-one mobile-one column_heading">
+								<div class="mcb-column-inner">
+									<h3 class="titlee" style="color: #E77523;">Sed cras pellentesque amet ultrices diam
+										at. Mauris, ornare
+										ultrices ultricies nulla. <span id="middtext">Risus consequat eros id amet
+											dictum in quis vel congue.</span> Id posuere vestibulum elit luctus dapibus
+										varius donec est nulla. Facilisis nulla vel eget fermentum vel molestie. Quis
+										felis porttitor a, malesuada viverra.</h3>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="section mcb-section mcb-section_custom43 default-width">
 				<div class="section_wrapper mcb-section_inner_custom43 row">
