Code responsive Update

--- a/index.html
+++ b/index.html
@@ -1725,52 +1725,33 @@
 				<ul class="shop-list">
 					<div class="al-it">
 						<li><a href="#" class="shop-link" data-lat="11.0168" data-lng="76.9558"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
+									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM -
 								Coimbatore</a></li>
 					</div>
 					<div class="al-it">
 						<li><a href="#" class="shop-link" data-lat="13.0827" data-lng="80.2707"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
+									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; GINDI -
 								Chennai</a></li>
 					</div>
 					<div class="al-it">
 						<li><a href="#" class="shop-link" data-lat="12.9716" data-lng="77.5946"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
+									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI -
 								Bangalore</a></li>
 					</div>
 					<div class="al-it">
 						<li><a href="#" class="shop-link" data-lat="28.7041" data-lng="77.1025"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
+									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; SAKET -
 								New Delhi</a></li>
 					</div>
 					<div class="al-it">
 						<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img src="Assets/image.png"
-									style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES - Mumbai</a></li>
+									style="width: 50px;" alt=""> &nbsp; MUMBAI - INDIA</a></li>
 					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="22.5726" data-lng="88.3639"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
-								Kolkata</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="23.0225" data-lng="72.5714"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
-								Ahmedabad</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="17.3850" data-lng="78.4867"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
-								Hyderabad</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="26.9124" data-lng="75.7873"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
-								Jaipur</a></li>
-					</div>
+				
 					<div class="al-it">
 						<li><a href="#" class="shop-link" data-lat="9.9312" data-lng="76.2673"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DETAILING WOLVES -
-								Kochi</a></li>
+									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; KOCHI -
+								KERALA</a></li>
 					</div>
 				</ul>
 			</div>
