--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	<link rel="stylesheet" href="content/carwash3/css/map.css">
 	<!-- <link rel="stylesheet" href="content/carwash3/css/theme.css"> -->
 	<!-- Revolution Slider -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 	<link rel="stylesheet" href="plugins/rs-plugin-6.custom/css/rs6.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -106,12 +108,14 @@
 											<li>
 												<a href="#">
 													<div id="theme-toggle">
-														<img id="dark-icon" src="./Assets/PNGS/brightness.png" alt="dark Theme">
-														<img id="light-icon" src="./Assets/PNGS/themes.png" alt="light Theme" style="display: none;">
+														<img id="dark-icon" src="./Assets/PNGS/brightness.png"
+															alt="dark Theme">
+														<img id="light-icon" src="./Assets/PNGS/themes.png"
+															alt="light Theme" style="display: none;">
 													</div>
 												</a>
 											</li>
-											
+
 										</ul>
 									</nav>
 
@@ -1820,7 +1824,7 @@
 
 	<!-- Footer  -->
 
-	<footer id="Footer" class="footer clearfix" role="contentinfo">
+	<!-- <footer id="Footer" class="footer clearfix" role="contentinfo">
 		<div class="containerr">
 			<div class="row mcb-wrap_inner">
 				<div class="col-12">
@@ -1865,6 +1869,56 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</footer> -->
+
+	<footer id="Footer" class="footer clearfix" role="contentinfo">
+		<div class="ftr-cntr">
+			<div class="ftr-sctn">
+				<h2 id="ftco" class="ftr-hd">DETAILING WOLVES</h2>
+				<p id="ftc" class="ftr-txt">They say that detailers are not made, they are born. Detailing is a way of
+					life. Getting into the minutest of details in the quest for perfection.</p>
+			</div>
+			<div class="ftr-sctn">
+				<h4 id="ftco" class="ftr-subhd">Call US</h4>
+				<ul id="ftc" class="ftr-lst">
+					<li><a href="#" id="ftc" type="number" class="ftr-lnk">+91 74487 44874</a></li>
+					<li><a href="#" id="ftc" type="number" class="ftr-lnk">+91 95668 96844</a></li>
+					<li><a href="#" id="ftc" type="number" class="ftr-lnk">+91 63853 93909</a></li>
+				</ul>
+			</div>
+			<div id="ftc" class="ftr-sctn">
+				<h4 id="ftco" class="ftr-subhd">FOLLOW US</h4>
+				<ul class="ftr-lstt">
+					<li><a href="https://www.instagram.com/detailing.wolves/" target="_blank" class="ftr-lnk"><i
+								class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.facebook.com/detailingwolves" target="_blank" class="ftr-lnk"><i
+								class="fab fa-facebook-f"></i></a></li>
+					<li><a href="https://www.google.com/search?kgmid=/g/11t4m5ftxd&hl=en-IN&q=Detailing+Wolves&kgs=b1aa681ed4ff65af&shndl=17&source=sh/x/kp/osrp/m5/3"
+							target="_blank" class="ftr-lnk"><i class="fab fa-google"></i></a></li>
+				</ul>
+				<h4 id="ftco" class="ftr-subhd">Email</h4>
+				<ul class="ftr-lst">
+					<li><a href="#" id="ftc" type="Email" class="ftr-lnk myulink">info@detailingwolves.com</a></li>
+				</ul>
+
+			</div>
+			<div class="ftr-sctn">
+				<h4 id="ftco" class="ftr-subhd">CONTACT US</h4>
+				<ul class="ftr-lst">
+					<li><a href="#" id="ftc" class="ftr-lnk">No 46A, R.K Complex Backside,</a></li>
+					<li><a href="#" id="ftc" class="ftr-lnk">Super garden Avenue, Opposite to Jaycee school,</a></li>
+					<li><a href="#" id="ftc" class="ftr-lnk">Vadavalli to Edayarpalayam road,</a></li>
+					<li><a href="#" id="ftc" class="ftr-lnk">Coimbatore-641041.</a></li>
+				</ul>
+			</div>
+			<!-- <div class="ftr-scctn">
+                <button id="ftc" class="ftr-btn">Contact us</button>
+            </div> -->
+		</div>
+		<div class="ftr-run-txt">
+			<p class="ftr-run-txt-p" id="ftcg">★ D E T A I L I N G W O L V E S ★ D E T A I L I N G W O L V E S ★ D E T A
+				I L I N G W O L V E S ★</p>
 		</div>
 	</footer>
 
