--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 										</ul>
 									</nav>
-<!-- <hr> -->
+									<!-- <hr> -->
 								</div>
 
 							</div>
@@ -1177,7 +1177,7 @@
 							<img src="Assets/one.png" alt="qw">
 						</div>
 						<br>
-						<h2 class="fo-clr">9H & 10H  CERAMIC & GRAPHENE COATING</h2>
+						<h2 class="fo-clr">9H & 10H CERAMIC & GRAPHENE COATING</h2>
 
 					</div>
 					<div class="grid-item br-rm">
@@ -1271,7 +1271,7 @@
 						<br>
 						<h2 class="fo-clr"> OIL CHANGE</h2>
 					</div>
-					<div class="grid-item br-rm" >
+					<div class="grid-item br-rm">
 						<div class="box_dec">
 							<img src="Assets/3.png" alt="  4D WHEEL
 								ALIGNMENT AND
@@ -1282,7 +1282,7 @@
 							ALIGNMENT AND
 							BALANCING</h2>
 					</div>
-					<div class="grid-item br-rm" >
+					<div class="grid-item br-rm">
 						<div class="box_dec">
 							<img src="Assets/7.png" alt="  PERFORMANCE
 								UPGRADING">
@@ -1291,7 +1291,7 @@
 						<h2 class="fo-clr"> PERFORMANCE
 							UPGRADING</h2>
 					</div>
-					<div class="grid-item br-rm" >
+					<div class="grid-item br-rm">
 						<div class="box_dec">
 							<img src="Assets/4.png" alt="  TYRE AND ALLOYS">
 						</div>
@@ -1442,10 +1442,12 @@
 															Exotic diamond wash
 														</li>
 														<li><i class="uil uil-car-sideview"
-																style="color: #E77523;"></i>&nbsp;&nbsp;&nbsp; Graphene wash
-															</li>
+																style="color: #E77523;"></i>&nbsp;&nbsp;&nbsp; Graphene
+															wash
+														</li>
 														<li><i class="uil uil-car-sideview"
-																style="color: #E77523;"></i>&nbsp;&nbsp;&nbsp;Ceramic wash
+																style="color: #E77523;"></i>&nbsp;&nbsp;&nbsp;Ceramic
+															wash
 														</li>
 
 													</ul>
@@ -1454,13 +1456,16 @@
 													<ul style="list-style-type:none; padding-left:0;">
 
 														<li><i class="uil uil-car-sideview"
-																style="color: #E77523;">&nbsp;&nbsp;&nbsp;</i> Premium wash
+																style="color: #E77523;">&nbsp;&nbsp;&nbsp;</i> Premium
+															wash
 														</li>
 														<li><i class="uil uil-car-sideview"
-																style="color: #E77523;">&nbsp;&nbsp;&nbsp;</i> Active Form Wash
+																style="color: #E77523;">&nbsp;&nbsp;&nbsp;</i> Active
+															Form Wash
 														</li>
 														<li><i class="uil uil-car-sideview"
-																style="color: #E77523;">&nbsp;&nbsp;&nbsp;</i> Basic Form Wash
+																style="color: #E77523;">&nbsp;&nbsp;&nbsp;</i> Basic
+															Form Wash
 														</li>
 													</ul>
 												</div>
@@ -1721,50 +1726,60 @@
 		</div>
 	</div>
 	<div class="container1">
-		<div class="list-container">
-			<div class="search-container">
-				<input style="background-color: white;border: #000000; color: #000000;" type="text" class="search-bar"
-					placeholder="Type a postcode or address..." onkeyup="filterShops()">
+		<div class="c-a">
+			<div class="list-container">
+				<div class="search-container">
+					<input
+						style="background-color: white; color: #000000; border-top-left-radius: 25px;"
+						type="text"
+						class="search-bar"
+						placeholder="Type a postcode or address..."
+						onfocus="this.style.backgroundColor = '#2f4db8';"
+						onblur="this.style.backgroundColor = 'white';"
+						onkeyup="filterShops()"
+					>
+				</div>
+				<div class="scrollable-list">
+					<ul class="shop-list">
+						<div class="al-it">
+							<li><a href="#" class="shop-link" data-lat="11.0168" data-lng="76.9558"><img
+										src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM -
+									Coimbatore</a></li>
+						</div>
+						<div class="al-it">
+							<li><a href="#" class="shop-link" data-lat="13.0827" data-lng="80.2707"><img
+										src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; GINDI -
+									Chennai</a></li>
+						</div>
+						<div class="al-it">
+							<li><a href="#" class="shop-link" data-lat="12.9716" data-lng="77.5946"><img
+										src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI -
+									Bangalore</a></li>
+						</div>
+						<div class="al-it">
+							<li><a href="#" class="shop-link" data-lat="28.7041" data-lng="77.1025"><img
+										src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; SAKET -
+									New Delhi</a></li>
+						</div>
+						<div class="al-it">
+							<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img src="Assets/image.png"
+										style="width: 50px;" alt=""> &nbsp; MUMBAI - INDIA</a></li>
+						</div>
+	
+						<div class="al-it">
+							<li><a href="#" class="shop-link" data-lat="9.9312" data-lng="76.2673"><img
+										src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; KOCHI -
+									KERALA</a></li>
+						</div>
+					</ul>
+				</div>
 			</div>
-			<div class="scrollable-list">
-				<ul class="shop-list">
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="11.0168" data-lng="76.9558"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM -
-								Coimbatore</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="13.0827" data-lng="80.2707"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; GINDI -
-								Chennai</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="12.9716" data-lng="77.5946"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI -
-								Bangalore</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="28.7041" data-lng="77.1025"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; SAKET -
-								New Delhi</a></li>
-					</div>
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img src="Assets/image.png"
-									style="width: 50px;" alt=""> &nbsp; MUMBAI - INDIA</a></li>
-					</div>
-
-					<div class="al-it">
-						<li><a href="#" class="shop-link" data-lat="9.9312" data-lng="76.2673"><img
-									src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; KOCHI -
-								KERALA</a></li>
-					</div>
-				</ul>
+			<div class="map-container">
+				<div id="map" class="map"></div>
 			</div>
-		</div>
-		<div class="map-container">
-			<div id="map" class="map"></div>
 		</div>
 	</div>
+	
 
 
 
@@ -1971,39 +1986,39 @@
 		// });
 
 		let lastScrollTop = 0;
-const topBar = document.getElementById('Top_bar');
+		const topBar = document.getElementById('Top_bar');
 
-// Set the default height of the top bar
-topBar.style.height = '100px';
+		// Set the default height of the top bar
+		topBar.style.height = '100px';
 
-// Listen for the scroll event
-window.addEventListener('scroll', function () {
-    const scrollTop = window.scrollY;
+		// Listen for the scroll event
+		window.addEventListener('scroll', function () {
+			const scrollTop = window.scrollY;
 
-    // Calculate the new height of the top bar
-    const newHeight = Math.min(80, 60 + scrollTop / 2); // Adjust divisor (10) for desired growth speed
-    topBar.style.height = `${newHeight}px`;
+			// Calculate the new height of the top bar
+			const newHeight = Math.min(80, 60 + scrollTop / 2); // Adjust divisor (10) for desired growth speed
+			topBar.style.height = `${newHeight}px`;
 
-    if (scrollTop > lastScrollTop) {
-        // Scrolling down - Hide the top bar
-        topBar.style.top = `-${newHeight}px`; // Negative top based on current height
-    } else {
-        // Scrolling up - Show the top bar
-        topBar.style.top = '0';
-    }
+			if (scrollTop > lastScrollTop) {
+				// Scrolling down - Hide the top bar
+				topBar.style.top = `-${newHeight}px`; // Negative top based on current height
+			} else {
+				// Scrolling up - Show the top bar
+				topBar.style.top = '0';
+			}
 
-    // Add a border or style when scrolled down
-    if (scrollTop > 0) {
-        topBar.classList.add('scrolled'); // Add a class for styling (e.g., border, shadow)
-    } else {
-        // Reset styles when at the top
-        topBar.classList.remove('scrolled');
-        topBar.style.height = '100px'; // Reset to default height
-    }
+			// Add a border or style when scrolled down
+			if (scrollTop > 0) {
+				topBar.classList.add('scrolled'); // Add a class for styling (e.g., border, shadow)
+			} else {
+				// Reset styles when at the top
+				topBar.classList.remove('scrolled');
+				topBar.style.height = '100px'; // Reset to default height
+			}
 
-    // Update lastScrollTop with the current scroll position
-    lastScrollTop = scrollTop;
-});
+			// Update lastScrollTop with the current scroll position
+			lastScrollTop = scrollTop;
+		});
 
 
 
