--- a/index.html
+++ b/index.html
@@ -1744,7 +1744,8 @@
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="11.0168" data-lng="76.9558"><img
 										src="Assets/image.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM -
-									Coimbatore</a></li>
+									Coimbatore</a>
+								</li>
 						</div>
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="13.0827" data-lng="80.2707"><img
