--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 												data-frame_999="o:0;st:w;" style="z-index:20;">
 												<div class="col-12 tablet-one mobile-one">
 													<div class="mcb-column-inner">
-														<a class="button button_theme button_size_2" href="#"
+														<a class="button button_theme button_size_2" href="tel:+1234567890"
 															style="padding: 25px 35px; border-radius: 15px;">
 															<span class="button_label">Book Now</span>
 														</a>
@@ -224,6 +224,7 @@
 												</div>
 											</rs-layer>
 										</div>
+										
 
 									</rs-group>
 
@@ -1743,33 +1744,33 @@
 					<ul class="shop-list">
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="11.0168" data-lng="76.9558"><img
-										src="Assets/branch/blaklogo.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM - 
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM - 
 									Coimbatore</a>
 								</li>
 						</div>
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="13.0827" data-lng="80.2707"><img
-										src="Assets/branch/blaklogo.png" style="width: 50px;" alt=""> &nbsp; GINDI -
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; GINDI -
 									Chennai</a></li>
 						</div>
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="12.9716" data-lng="77.5946"><img
-										src="Assets/branch/blaklogo.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI -
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI -
 									Bangalore</a></li>
 						</div>
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="28.7041" data-lng="77.1025"><img
-										src="Assets/branch/blaklogo.png" style="width: 50px;" alt=""> &nbsp; SAKET -
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; SAKET -
 									New Delhi</a></li>
 						</div>
 						<div class="al-it">
-							<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img src="Assets/branch/blaklogo.png"
+							<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img src="Assets/branch/Logoback.png"
 										style="width: 50px;" alt=""> &nbsp; MUMBAI - INDIA</a></li>
 						</div>
 	
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="9.9312" data-lng="76.2673"><img
-										src="Assets/branch/blaklogo.png" style="width: 50px;" alt=""> &nbsp; KOCHI -
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; KOCHI -
 									KERALA</a></li>
 						</div>
 					</ul>
