--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
 												data-frame_999="o:0;st:w;" style="z-index:20;">
 												<div class="col-12 tablet-one mobile-one">
 													<div class="mcb-column-inner">
-														<a class="button button_theme button_size_2" href="tel:+1234567890"
+														<a class="button button_theme button_size_2"
+															href="tel:+917448744874"
 															style="padding: 25px 35px; border-radius: 15px;">
 															<span class="button_label">Book Now</span>
 														</a>
@@ -224,7 +225,8 @@
 												</div>
 											</rs-layer>
 										</div>
-										
+
+
 
 									</rs-group>
 
@@ -1730,23 +1732,19 @@
 		<div class="c-a">
 			<div class="list-container">
 				<div class="search-container">
-					<input
-						style="background-color: white; color: #000000; border-top-left-radius: 25px;"
-						type="text"
-						class="search-bar"
-						placeholder="Type a postcode or address..."
-						onfocus="this.style.backgroundColor = '#2f4db8';"
-						onblur="this.style.backgroundColor = 'white';"
-						onkeyup="filterShops()"
-					>
+					<input style="background-color: white; color: #000000; border-top-left-radius: 25px;" type="text"
+						class="search-bar" placeholder="Type a postcode or address..."
+						onfocus="this.style.backgroundColor = '#2f4db8';" onblur="this.style.backgroundColor = 'white';"
+						onkeyup="filterShops()">
 				</div>
 				<div class="scrollable-list">
 					<ul class="shop-list">
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="11.0168" data-lng="76.9558"><img
-										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM - 
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; DANDHIPURAM
+									-
 									Coimbatore</a>
-								</li>
+							</li>
 						</div>
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="13.0827" data-lng="80.2707"><img
@@ -1755,7 +1753,8 @@
 						</div>
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="12.9716" data-lng="77.5946"><img
-										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI -
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; SKANDAGIRI
+									-
 									Bangalore</a></li>
 						</div>
 						<div class="al-it">
@@ -1764,10 +1763,11 @@
 									New Delhi</a></li>
 						</div>
 						<div class="al-it">
-							<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img src="Assets/branch/Logoback.png"
-										style="width: 50px;" alt=""> &nbsp; MUMBAI - INDIA</a></li>
+							<li><a href="#" class="shop-link" data-lat="" data-lng="72.8777"><img
+										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; MUMBAI -
+									INDIA</a></li>
 						</div>
-	
+
 						<div class="al-it">
 							<li><a href="#" class="shop-link" data-lat="9.9312" data-lng="76.2673"><img
 										src="Assets/branch/Logoback.png" style="width: 50px;" alt=""> &nbsp; KOCHI -
@@ -1781,7 +1781,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 
 
